# quotes

./: .env.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
admin/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
admin/src/: main.ts  style.css
admin/src/api/: client.ts
admin/src/views/: Admin.vue  Login.vue
backend/: Dockerfile  go.mod  go.sum
backend/cmd/: main.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/handlers/: quote_handler.go
backend/internal/models/: quote.go
backend/internal/repository/: quote_repository.go
backend/internal/router/: router.go
backend_cpp/: CMakeLists.txt  Dockerfile  README.md
backend_cpp/include/: config.h  database.h  handlers.h  models.h  repository.h
backend_cpp/src/: config.cpp  database.cpp  handlers.cpp  main.cpp  models.cpp  repository.cpp
backend_php/: .rr.yaml  Dockerfile  composer.json  test_rr.php
backend_php/src/: app.php  config.php  database.php  handlers.php  minimal_worker.php  models.php  repository.php  router.php  simple_worker.php  test.php  test_worker.php  worker.php
backend_rust/: .gitignore  Cargo.toml  Dockerfile
backend_rust/src/: config.rs  database.rs  handlers.rs  main.rs  models.rs  repository.rs  router.rs
db/init/: 01_init.sql
db/migrations/: 001_create_quotes_table.sql  002_add_likes_count.sql  003_create_likes_table.sql
frontend/: .eslintrc.cjs  Caddyfile  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: client.ts
frontend/src/views/: Admin.vue  Home.vue
infra/: DEPLOY.md  README.md  deploy-production.sh  deploy.sh
