[package]
name = "quotes-backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Fix version for home crate to avoid edition2024 requirement
[patch.crates-io]
home = { version = "=0.5.11" }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

